--- a/final-pjt-back/requirements.txt
+++ b/final-pjt-back/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.6.0
 Django==3.2.18
+django-cors-headers==4.0.0
+django-filter==23.2
+djangorestframework==3.14.0
+Pillow==9.5.0
 pytz==2023.3
 sqlparse==0.4.4
-Pillow==9.5.0
