--- a/final-pjt-back/requirements.txt
+++ b/final-pjt-back/requirements.txt
@@ -10,6 +10,7 @@ django-allauth==0.52.0
 django-cors-headers==4.0.0
 django-environ==0.10.0
 django-filter==23.2
+django-rest-auth==0.9.5
 djangorestframework==3.14.0
 idna==3.4
 oauthlib==3.2.2
@@ -20,5 +21,6 @@ python3-openid==3.2.0
 pytz==2023.3
 requests==2.30.0
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.4
 urllib3==2.0.2
