--- a/final-pjt-back/requirements.txt
+++ b/final-pjt-back/requirements.txt
@@ -6,6 +6,7 @@ cryptography==40.0.2
 defusedxml==0.7.1
 dj-rest-auth==4.0.0
 Django==3.2.18
+django-admin-rangefilter==0.10.0
 django-allauth==0.52.0
 django-cors-headers==4.0.0
 django-environ==0.10.0
