--- a/final-pjt-front/package.json
+++ b/final-pjt-front/package.json
@@ -12,7 +12,9 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.3",
+    "normalize.css": "^8.0.1",
     "vue": "^2.7.14",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
