--- a/final-pjt-back/.gitignore
+++ b/final-pjt-back/.gitignore
@@ -461,4 +461,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+*/migrations/000*
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,python,django,pycharm,visualstudiocode
